--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,15 @@
 }
 
 .dropdown {
-  background-color: white;
+  background: #A7FFEB; 
+  width: 200px;
+  height: 65px;
+}
+
+.selections {
+  border-radius: 30px;
+  width: 200px;
+  height: 65px;
+  border: 0;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25), 0px 1px 3px rgba(0, 0, 0, 0.15);
 }
