--- a/src/component/InformationBox.css
+++ b/src/component/InformationBox.css
@@ -1,20 +1,62 @@
 .card {
     cursor: pointer;
+    background: #0D47A1;
+    border-radius: 30px;
+    width: 275px;
+    height: 100px;
+    align-self: center;
+    padding: 20px 16px;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .cardCases {
-    color: red;
+    color: #FF8787;
+    align-self: flex-start;
+    margin: 0px 5px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.cardTitle {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 35px;
+    color: #FFFFFF;
+    align-self: center;
+    margin: 0px 5px;
+}
+
+.cardTotal {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    color: #FFFFFF;
+    align-self: flex-start;
+    margin: 0px 5px;
 }
 
 .card--selected {
-    border-top: 10px solid greenyellow;
+    border-top: 20px solid #A0FF9E;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25), 0px 1px 3px rgba(0, 0, 0, 0.15);
+    transform: scale(1.1, 1.1);
 }
 
 .card--red {
-    border-color: red;
+    border-color: #FF8787;
 }
 
 .card--green {
     color: greenyellow;
 }
 
+@media (max-width: 1200px) {
+    .card {
+        border-radius: 30px;
+        width: 275px;
+        height: 100px;
+        align-self: center;
+        padding: 20px 16px;
+        transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+    }
+}
