--- a/src/component/Map.css
+++ b/src/component/Map.css
@@ -1,15 +1,18 @@
 
 .mapContainer {
-    height: 500px;
-    background-color: white;
-    padding: 5px;
-    border-radius: 20px;
-    margin-top: 0px;
-    box-shadow: 0 0 8px -4px rgba(0,0,0,0.5)
+    height: 600px;
+    background-color: #0D47A1;
+    padding: 20px;
+    border-radius: 30px;
+    margin-top: 5px;
+    margin-left: 20px;
+    margin-bottom: 15px;
+    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.25), 0px 1px 3px rgba(0, 0, 0, 0.15);
 }
 
 .mapContainer .leaflet-container {
     height: 100%;
+    border-radius: 20px;
 }
 
 .info-name {
@@ -39,4 +42,17 @@
 .info-new {
     font-size: 16px;
     margin-top: 5px;
+}
+
+@media (max-width: 1200px) {
+    .mapContainer {
+        margin-right: 20px;
+    }
+}
+
+@media (max-width: 900px) {
+    .mapContainer {
+        margin-left: 5px;
+        margin-right: 5px;
+    }
 }
